--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h2>For you,</h2>
+    <h2>Hey Lover,</h2>
 
     <p>I just want to write you a quick letter about this moment we're sharing right now in our lives. 
         Everything moves quickly. Time never stands still, and I know how fleeting every second is. 
@@ -30,7 +30,9 @@
         I know I'm using them well being with you. Some day, when the end of my life comes, 
         I will know it was well spent because I got to spend it with you. 
         Whether this love lasts a lifetime or not, every moment I get to share with you is 
-        one I will treasure for all of my days.</p>
+        one I will treasure for all of my days.
+    
+        I love you.</p>
 
     <div class="cursor"></div>
     <script type="text/javascript" src="script.js"></script>
